--- a/style/style_index.css
+++ b/style/style_index.css
@@ -11,6 +11,16 @@ body {
 }
 
 /* Textarea for description */
-#aboutMe {
+#about {
     resize: none;
+}
+
+/* Booton scroll */
+
+#btn-scroll-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  z-index: 999;
 }
