--- a/style/style_cv.css
+++ b/style/style_cv.css
@@ -8,7 +8,7 @@ body {
 
 /* Contenedor principal "folio" */
 
-.father {
+#father {
     width: 45%;
     margin: 0 auto;
     padding: 20px;
@@ -31,7 +31,7 @@ body {
 
 /* Panel general */
 
-.general {
+#general {
     flex: 1;
     padding-left: 0.25rem;
 }
@@ -90,7 +90,7 @@ h2 {
     margin-top: 3%;
 }
 
-.about-me {
+#about-me {
     margin-top: 4%;
 }
 
@@ -106,20 +106,22 @@ h2 {
 
 /* left-sidebar */
 
-.contact {
+#contact {
     margin-top: -20%;
 }
 
-.h-contact {
+.title-h {
     padding-left: 5%;
     font-size: 2.5vh;
+}
+
+#h-contact {
     margin-bottom: 0%;
 }
 
-.h-education {
-    padding-left: 5%;
-    font-size: 2.5vh;
-    margin-top: 10%;
+#h-education, #h-skills {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .p-left-sidebar {
@@ -128,12 +130,20 @@ h2 {
     font-size: 1.5vh;
 }
 
+#school {
+    margin-bottom: 0px;
+}
+
+#start-date-edu {
+    margin-top: 0px;
+}
+
 .icon {
     width: 10%;
     vertical-align: middle;
 }
 
-#list-left-sidebar {
+.list-left-sidebar {
     font-size: 1.45vh;
     padding-left: 12%;
     margin-right: 5%;
@@ -142,7 +152,7 @@ h2 {
 .h4-left-sidebar {
     padding-left: 5%;
     font-size: 1.75vh;
-    margin-top: -5%;
+    margin-top: 10px;
     margin-bottom: -2%;
 }
 
@@ -150,8 +160,7 @@ h2 {
     border: 1px solid white;
     width: 90%;
     margin-left: 5%;
-    margin-top: 11%;
-    margin-bottom: 0%;
+    margin-top: 7px;
 }
 
 /* Block */
@@ -167,7 +176,7 @@ a {
 /* Responsive */
 
 @media (max-height: 900px) {
-    .father {
+    #father {
         min-height: auto;
         padding: 15px;
     }
@@ -201,7 +210,7 @@ a {
 /* Responsive movil */
 
 @media (max-width: 430px) {
-    .father {
+    #father {
         width: 90%;
         flex-direction: column;
         padding: 10px;
@@ -209,11 +218,11 @@ a {
     }
 
     .left-sidebar,
-    .general {
+    #general {
         width: 100%;
     }
 
-    .general {
+    #general {
         padding-left: 0;
     }
 
@@ -270,14 +279,14 @@ a {
         font-size: 2vh;
     }
 
-    .h-contact {
+    #h-contact {
         padding-left: 5%;
         margin-right: 5%;
         padding-top: 15%;
         font-size: 2.9vh;
     }
 
-    .h-education {
+    #h-education {
         padding-left: 5%;
         margin-right: 5%;
         font-size: 2.9vh;
@@ -289,7 +298,7 @@ a {
         font-size: 2.3vh;
     }
 
-    #list-left-sidebar {
+    .list-left-sidebar {
         padding-left: 11%;
         margin-right: 5%;
         font-size: 2vh;
@@ -303,7 +312,7 @@ a {
 /* Resp0onsive Tablet */
 
 @media (max-width: 1024px) and (min-width: 600px) {
-    .father {
+    #father {
         width: 95%;
         gap: 1.5rem;
     }
@@ -359,13 +368,11 @@ a {
         margin-left: 3%;
     }
 
-    #list-left-sidebar,
-    .p-left-sidebar,
-    .h4-left-sidebar {
+    .list-left-sidebar, .p-left-sidebar, .h4-left-sidebar {
         font-size: 1.8vh;
     }
 
-    .h-contact, .h-education {
+    #h-contact, #h-education {
         font-size: 3vh;
     }
 
